Fix footer on mobile

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -6,9 +6,18 @@
   right: 0;
   bottom: 0;
 
+  .wrap {
+    flex-wrap: wrap-reverse;
+  }
+
   .copyright {
     flex: 1;
     margin: 0;
     line-height: 2.5rem;
+    min-width: 130px;
+
+    @media (max-width: 400px) {
+      text-align: center;
+    }
   }
 }
